# omegacli

./: .gitignore  .mcp.json.example  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.html  HERMES_BRIEFING.md  OMEGA.md  OMEGA_HACKING_TRANSFORMATION_PLAN.md  Omega Desktop.bat  README.md  Start-OmegaWeb.bat  Start-OmegaWeb.ps1  _quality.py  _test_agentic.py  _test_swe.py  agent.py  analyze_agent.py  analyze_agent2.py  analyze_tools.py  camera.py  claude.ps1  cli.py  combine_payloads.py  config.py  deploy-provider.sh  deploy.py  elite_template.html  evolve.py  extract_asar.py  find_importers.py  gen_all_payloads.py  gen_cmdi_payloads.py  gen_lfi_payloads.py  gen_sqli_payloads.py  gen_ssti_payloads.py  gen_xss_payloads.py  gmail_password_cycler.py  gmail_password_cycler_v2.py  llm.py  login.js  main.py  (+42 more)
.github/: PULL_REQUEST_TEMPLATE.md
CONFIG/: Start-OmegaWeb.bat  claude.bat  omega-team.bat  omega.bat  wifi_brute.ps1
DOCS/: ARCHITECTURE_REFACTOR.md  AUDIT.md  CODE_REVIEW_GUIDELINES.md  DEBT.md  ENGINEERING_ONBOARDING.md
OMEGAAGENTIC/: omega_agentic_core.py  omega_auth_bypass.py  omega_beacon.py  omega_god_tier.py  omega_swe_engine.py
OMEGADOCTOR/: omega_repair.py
OMEGATUI/: omega_tui.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
claude-core/: package.json  sdk.mjs
claude_asar_extracted/: package.json
infrastructure/: __init__.py
omega/: __init__.py  hacker_tools.py  team.py
omega_doctor/: __init__.py  monitor.py  (+7 more)
(+134 files in other folders)
